--- a/style.css
+++ b/style.css
@@ -109,16 +109,14 @@ body{
 }
 #panel4 h2{
 	padding-top: 100px;
-	opacity: 0;
 }
 #panel4 .row .col-md-4{
 	margin-top: 20px;
 	padding-top: 20px;
-	padding-bottom: 100px;
+	padding-bottom: 10px;
 	background-color: whitesmoke;
     transform: scale(.99);
     transition: .5s;
-    opacity: 0;
 }
 #panel4 .row .col-md-4 .card-img{
 	height: 150px;
@@ -136,33 +134,31 @@ body{
 	width: 60px;
 	cursor: pointer;
 }
-#subscriber .row .col-md-12 .btn{
-	opacity: 0;
-}
-#subscriber h4{
-	opacity: 0;
-}
 #footer{
 	padding: 70px;
+	background-color: #21D4FD;
+    background-image: linear-gradient(19deg, #21D4FD 0%, #8100ce 50%, #d00000 100%);
 }
 #footer .row .col-md-4 h4{
 	font-family: 'Faster One', cursive;
 }
 #footer .row .col-md-3 h5:before{
-	margin-top: 20px;
+	margin-top: 22px;
+	content: '';
+	height: 3px;
+	width: 50%;
+	position: absolute;
+	background-color: #21D4FD;
+    background-image: linear-gradient(19deg, #21D4FD 0%, #8100ce 50%, #d00000 100%);
+}
+#footer .row .col-md-2 h5:before{
+	margin-top: 22px;
 	content: '';
 	height: 3px;
 	width: 60%;
 	position: absolute;
-	background-color: blue;
-}
-#footer .row .col-md-2 h5:before{
-	margin-top: 20px;
-	content: '';
-	height: 3px;
-	width: 70%;
-	position: absolute;
-	background-color: blue;
+	background-color: #21D4FD;
+    background-image: linear-gradient(19deg, #21D4FD 0%, #8100ce 50%, #d00000 100%);
 }
 #footer .row .col-md-2 a,#footer .row .col-md-3 a{
 	text-decoration: none;
